libs/preprocessor/tests/errors/pe11_expected_function_or_value/stderr.ansi
[0m[1m[38;5;9merror[PE11][0m[1m: attempted to use a unit as a function[0m
  [0m[36m┌─[0m source.hpp:3:12
  [0m[36m│[0m
[0m[36m1[0m [0m[36m│[0m #define HELLO
  [0m[36m│[0m         [0m[36m-----[0m [0m[36mdefined as a unit[0m
[0m[36m2[0m [0m[36m│[0m 
[0m[36m3[0m [0m[36m│[0m greeting = [0m[31mHELLO[0m(world);
  [0m[36m│[0m            [0m[31m^^^^^[0m [0m[31mused as a function[0m

